Fix snowflakes z-index

--- a/src/styles/Snowflakes.css
+++ b/src/styles/Snowflakes.css
@@ -34,9 +34,7 @@
 
 .snowflakes {
     position: fixed;
-    top: 0;
-    height: 100vh;
-    width: 100vw;
+    z-index: 2;
 }
 
 .snowflake-container {
